--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,4 +1,4 @@
-appId: com.electron.app
+appId: com.astralab.koshino
 productName: astra-lab
 directories:
   buildResources: build
@@ -11,7 +11,7 @@ files:
 asarUnpack:
   - resources/**
 win:
-  executableName: astra-lab
+  executableName: AstraLab
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
