--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astra-lab",
   "version": "1.0.0",
-  "description": "An Electron application with React",
+  "description": "一个化学实验室",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
